# new-ever

./: .gitignore  CMakeLists.txt  pixi.toml  run_tests.py  test.py
CMake/: FindOptiX.cmake  FindSlang.cmake  FindTorch.cmake  SlangCUDACompile.cmake  SlangCUDAEmbed.cmake  SlangCudaEmbed.cmake  SlangHelper.cmake  SlangOptiXIREmbed.cmake  SlangPTXEmbed.cmake  slangConfigVersion.cmake  slangTargets-release.cmake  slangTargets.cmake
GaussianRT/: CMakeLists.txt  README.md  setup.py
GaussianRT/cmake/: CompileSlangShaders.cmake  embed_shader.py
GaussianRT/docs/: optix_curves_proposal.md
GaussianRT/examples/: basic_render.py  optimize_ellipsoids.py
GaussianRT/include/: AccelerationStructure.h  Device.h  RayTracer.h  Types.h
GaussianRT/include/gaussian_rt/: AccelStruct.h  BackwardPass.h  Device.h  ForwardRenderer.h  GaussianPrimitives.h  GaussianRT.h  PrimitiveSet.h  Types.h
GaussianRT/optix_shaders/: curve_shaders.cu
GaussianRT/python/: __init__.py  bindings.cpp  gaussian_rt.py  gaussianrt.py  renderer.py  torch_extension.cpp
GaussianRT/shaders/: backward.slang  ellipsoid.slang  volume.slang
GaussianRT/shaders/backward/: backward_kernel.slang
GaussianRT/shaders/common/: intersect.slang  math.slang  sh.slang  types.slang
GaussianRT/shaders/forward/: raytracing.slang
GaussianRT/slang/: backward.slang  common.slang  forward.slang
GaussianRT/src/: AccelStruct.cpp  AccelerationStructure.cpp  BackwardPass.cpp  Device.cpp  ForwardRenderer.cpp  GaussianPrimitives.cpp  GaussianRT.cpp  PrimitiveSet.cpp  RayTracer.cpp  acceleration_structure.cpp  acceleration_structure.h  device.cpp  device.h  renderer.cpp  renderer.h  types.h  volume_renderer.cpp  volume_renderer.h
GaussianRT/src/cuda/: aabb_builder.cu  backward_kernel.cu  backward_launcher.cu  initialize_state.cu
GaussianRT/src/optix/: curve_accel.cpp  curve_primitives.h
GaussianRT/src/python/: bindings.cpp
GaussianRT/test/: main.cpp
GaussianRT/tests/: CMakeLists.txt  test_accel.cpp  test_device.cpp  test_integration.py  test_primitives.cpp  test_types.cpp
modern-splinetracer/: CMakeLists.txt  README.md
modern-splinetracer/include/: AccelerationStructure.h  Device.h  RayTracer.h  Types.h
modern-splinetracer/shaders/: raytracer.slang  safe_math.slang  sh.slang  volume.slang
modern-splinetracer/src/: AccelerationStructure.cpp  Device.cpp  RayTracer.cpp
modern-splinetracer/test/: main.cpp
primtracer/: __init__.py
primtracer/scripts/: generate_reflection.py
primtracer/slang/: backward_pass.slang  backwards_kernel.slang  ellipsoid.slang  ellipsoid_intersect.slang  fast_shaders.slang  optix_shaders.slang  safe-math.slang  safe_math.slang  sh-half.slang  sh.slang  sh_evaluation.slang  shaders.slang  spherical_harmonics.slang  spline-machine.slang  tensor_utils.slang  volume_integrator.slang
primtracer/src/: GAS.cpp  accel_structure.cpp  accel_structure.h  create_aabbs.cu  cuda_buffer.h  cuda_kernels.cu  cuda_kernels.h  device_context.h  exception.h  initialize_density.cu  initialize_density.h  launch_params.cpp  launch_params.h  params_validator.h  primitive_kernels.cu  primitive_kernels.h  py_binding.cpp  python_bindings.cpp  ray_pipeline.cpp  ray_pipeline.h  ray_tracer.cpp  ray_tracer.h  structs.h  types.h  volume_types.h
primtracers/: __init__.py
primtracers/slang/: backward_pass.slang  backwards_kernel.slang  ellipsoid_intersect.slang  gaussian_projection.slang  optix_shaders.slang  shaders.slang  tensor_utils.slang  tri-intersect.slang  volume-integrator.slang  volume_integrator.slang
primtracers/src/: Forward.cpp  Forward.h  cuda_buffer.h  cuda_kernels.cu  cuda_kernels.h  py_binding.cpp  python_bindings.cpp  ray_pipeline.cpp  ray_pipeline.h  structs.h  volume_types.h
splinetracers/: __init__.py  backwards_kernel.cp311-win_amd64.pyd  ellipsoid_splinetracer.cp311-win_amd64.pyd  fast_ellipsoid_splinetracer.py  quad.py  sh_kernel.cp311-win_amd64.pyd
splinetracers/fast_ellipsoid_splinetracer/: CMakeLists.txt  Forward.cpp  Forward.h  GAS.cpp  GAS.h  OptixPipeline.cpp  OptixPipeline.h  SlangCompiler.cpp  SlangCompiler.h  SplineTracerAutograd.cu  SplineTracerAutograd.h  TraceParams.h  backward_kernel.cu  backward_kernel.h  backward_kernel_launcher.cu  example_usage.cpp  exception.h  initialize_density.cu  initialize_density.h  launch_params.h  ply_file_loader.cc  py_binding.cpp  sbt_record.h  sh.h  sh_autograd.cpp  sh_autograd.cu  sh_autograd.h  sh_kernel.cu  sh_kernel.h  shaders.cu  spline_tracer_autograd.cpp  spline_tracer_autograd.cu  spline_tracer_autograd.h  structs.h
splinetracers/fast_ellipsoid_splinetracer/slang/: backwards_kernel.slang  backwards_kernel_cuda.slang  fast_shaders.slang  shaders.slang  spline-machine.slang
splinetracers/fast_ellipsoid_splinetracer/slang/.slangtorch_cache/backwards_kernel/b9c103f6b206b8e5/: backwards_kernel.cpp  backwards_kernel_cuda.cu
splinetracers/fast_ellipsoid_splinetracer/slang/.slangtorch_cache/backwards_kernel/b9c103f6b206b8e5/0/: .ninja_deps  .ninja_log  _slangtorch_backwards_kernel_b9c103f6b206b8e5.exp  _slangtorch_backwards_kernel_b9c103f6b206b8e5.pyd  build.ninja  metadata.json
splinetracers/fast_ellipsoid_splinetracer/slang/.slangtorch_cache/backwards_kernel/b9c103f6b206b8e5/1/: .ninja_deps  .ninja_log  _slangtorch_backwards_kernel_b9c103f6b206b8e5.exp  _slangtorch_backwards_kernel_b9c103f6b206b8e5.pyd  build.ninja  metadata.json
splinetracers/fast_ellipsoid_splinetracer/slang/.slangtorch_cache/backwards_kernel/b9c103f6b206b8e5/2/: .ninja_deps  .ninja_log  _slangtorch_backwards_kernel_b9c103f6b206b8e5.exp  _slangtorch_backwards_kernel_b9c103f6b206b8e5.pyd  metadata.json
splinetracers/fast_ellipsoid_splinetracer/slang/.slangtorch_cache/backwards_kernel/b9c103f6b206b8e5/3/: .ninja_deps  .ninja_log  _slangtorch_backwards_kernel_b9c103f6b206b8e5.exp  _slangtorch_backwards_kernel_b9c103f6b206b8e5.lib  _slangtorch_backwards_kernel_b9c103f6b206b8e5.pyd  metadata.json
tests/: compare_quadrature.py  conftest.py  eval_sh.py  grad_check.py  quad.py  test_eval_sh.py  test_gaussianrt.py  test_trace_rays.py  test_utils.py
(+69 files in other folders)
